--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -4417,7 +4417,16 @@
         "id": "Jm9gWDRMy81D"
       },
       "source": [
-        "## Custom Transformers"
+        "## Custom Transformers\n",
+        "\n",
+        "- Although Scikit-Learn provides many useful transformers, you will need to\n",
+        "write your own for tasks such as custom transformations, cleanup\n",
+        "operations, or combining specific attributes\n",
+        "- For transformations that don’t require any training, you can just write a\n",
+        "function that takes a NumPy array as input and outputs the transformed\n",
+        "array.\n",
+        "- Let’s create a log-transformer and apply it to the population\n",
+        "feature:"
       ]
     },
     {
@@ -4442,6 +4451,19 @@
         "log_transformer = FunctionTransformer(np.log, inverse_func=np.exp)\n",
         "log_pop = log_transformer.transform(housing[[\"population\"]])"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- The inverse_func argument is optional. It lets you specify an inverse\n",
+        "transform function, e.g., if you plan to use your transformer in a\n",
+        "TransformedTargetRegressor.\n",
+        "- Your transformation function can take hyperparameters as additional\n",
+        "arguments."
+      ],
+      "metadata": {
+        "id": "RuK-RtIIKdzW"
+      }
     },
     {
       "cell_type": "code",
@@ -4484,6 +4506,20 @@
       "source": [
         "age_simil_35"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Note that there’s no inverse function for the RBF kernel, since there are\n",
+        "always two values at a given distance from a fixed point (except at\n",
+        "distance 0).\n",
+        "- Also note that rbf_kernel() does not treat the features\n",
+        "separately. If you pass it an array with two features, it will measure the 2D\n",
+        "distance (Euclidean) to measure similarity."
+      ],
+      "metadata": {
+        "id": "vz-cbhO9KyLz"
+      }
     },
     {
       "cell_type": "code",
@@ -4529,6 +4565,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- Custom transformers are also useful to combine features."
+      ],
+      "metadata": {
+        "id": "sUwWZm3gMPnD"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -4552,6 +4597,28 @@
         "ratio_transformer = FunctionTransformer(lambda X: X[:, [0]] / X[:, [1]])\n",
         "ratio_transformer.transform(np.array([[1., 2.], [3., 4.]]))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "FunctionTransformer is very handy, but what if you would like your\n",
+        "transformer to be trainable, learning some parameters in the fit()\n",
+        "method and using them later in the transform() method?\n",
+        "- For this, you need to write a custom class. Scikit-Learn relies on duck typing, so this\n",
+        "class does not have to inherit from any particular base class. All it needs is\n",
+        "three methods: fit() (which must return self), transform(), and\n",
+        "fit_transform().\n",
+        "- You can get fit_transform() for free by simply adding\n",
+        "TransformerMixin as a base class: the default implementation will just\n",
+        "call fit() and then transform().\n",
+        "  - If you add BaseEstimator as a base class (and avoid using *args and **kwargs in your constructor), you will also get two extra methods: get_params() and set_params().\n",
+        "- These will be useful for automatic hyperparameter tuning.\n",
+        "For example, here’s a custom transformer that acts much like the\n",
+        "StandardScaler:"
+      ],
+      "metadata": {
+        "id": "reiimjYqMre8"
+      }
     },
     {
       "cell_type": "code",
@@ -4583,6 +4650,26 @@
         "            X = X - self.mean_\n",
         "        return X / self.scale_"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Here are a few things to note:\n",
+        "- The sklearn.utils.validation package contains several\n",
+        "functions we can use to validate the inputs. For simplicity, we will skip\n",
+        "such tests in the rest of this book, but production code should have\n",
+        "them.\n",
+        "- Scikit-Learn pipelines require the fit() method to have two arguments X and y, which is why we need the y=None argument even though we don’t use y.\n",
+        "- All Scikit-Learn estimators set n_features_in_ in the fit() method, and they ensure that the data passed to transform() or predict() has this number of features.\n",
+        "- The fit() method must return self.\n",
+        "- This implementation is not 100% complete: all estimators should set feature_names_in_ in the fit() method when they are passed a DataFrame. Moreover, all transformers should provide a get_feature_names_out() method, as well as an inverse_transform() method when their transformation can be reversed. See the last exercise at the end of this chapter for more details.\n",
+        "\n",
+        "A custom transformer can (and often does) use other estimators in its\n",
+        "implementation."
+      ],
+      "metadata": {
+        "id": "UhO5AvUvNPc8"
+      }
     },
     {
       "cell_type": "code",
@@ -4625,6 +4712,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**TIP**\n",
+        "\n",
+        "You can check whether your custom estimator respects Scikit-Learn’s API by\n",
+        "passing an instance to check_estimator() from the sklearn.utils.estimator_checks package\n",
+        "\n",
+        "**Notes**\n",
+        "- As you will see in Chapter 9, k-means is a clustering algorithm that locates\n",
+        "clusters in the data.\n",
+        "- How many it searches for is controlled by the n_clusters hyperparameter.\n",
+        "- After training, the cluster centers are available via the cluster_centers_ attribute. - The fit() method of KMeans supports an optional argument sample_weight, which lets the\n",
+        "user specify the relative weights of the samples.\n",
+        "- k-means is a stochastic algorithm, meaning that it relies on randomness to locate the clusters, so if you want reproducible results, you must set the random_state parameter."
+      ],
+      "metadata": {
+        "id": "lpKlx7E7PBcz"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -4636,6 +4743,17 @@
         "similarities = cluster_simil.fit_transform(housing[[\"latitude\", \"longitude\"]],\n",
         "                                           sample_weight=housing_labels)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- This code creates a ClusterSimilarity transformer, setting the number of clusters to 10.\n",
+        "- The transformer uses k-means to locate the clusters, then measures the Gaussian RBF similarity between each district and all 10 cluster centers.\n",
+        "- The result is a matrix with one row per district, and one column per cluster."
+      ],
+      "metadata": {
+        "id": "on0JAJ8XS-ll"
+      }
     },
     {
       "cell_type": "code",
@@ -4717,6 +4835,19 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "- As you can see, there are many data transformation steps that need to be\n",
+        "executed in the right order. Fortunately, Scikit-Learn provides the\n",
+        "Pipeline class to help with such sequences of transformations\n",
+        "- Here is a small pipeline for numerical attributes, which will first impute then scale\n",
+        "the input features:"
+      ],
+      "metadata": {
+        "id": "K5aJKFFbURpe"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "yg3pX8xJy81F"
       },
@@ -4739,6 +4870,27 @@
         "    (\"standardize\", StandardScaler()),\n",
         "])"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Notes**\n",
+        "- The Pipeline constructor takes a list of name/estimator pairs (2-tuples)\n",
+        "defining a sequence of steps.\n",
+        "- The names can be anything you like, as long as they are unique and don’t contain double underscores (__). They will be useful later, when we discuss hyperparameter tuning.\n",
+        "- The estimators must all be transformers (i.e., they must have a\n",
+        "fit_transform() method), except for the last one, which can be\n",
+        "anything: a transformer, a predictor, or any other type of estimator.\n",
+        "- If you don’t want to name the transformers, you can use the make_pipeline() function instead;\n",
+        "\n",
+        "\n",
+        "**TIP**\n",
+        "- In a Jupyter notebook, if you import sklearn and run sklearn. set_config(display=\"diagram\"), all Scikit-Learn estimators will be rendered as interactive diagrams. This is particularly useful for visualizing pipelines.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "cpIQ0JpXUtU4"
+      }
     },
     {
       "cell_type": "code",
@@ -4780,6 +4932,18 @@
         "\n",
         "num_pipeline"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- If multiple transformers have the same name, an index is appended to their names (e.g., \"foo-1\", \"foo-2\", etc.).\n",
+        "- When you call the pipeline’s fit() method, it calls fit_transform() sequentially on all the transformers, passing the output of each call as the parameter to the next call until it reaches the final estimator, for which it just calls the fit() method.\n",
+        "- The pipeline exposes the same methods as the final estimator.\n",
+        "- If the last estimator were a predictor instead of a transformer, then the pipeline would have a predict() method rather than a transform() method."
+      ],
+      "metadata": {
+        "id": "ocYVw-rjYV6C"
+      }
     },
     {
       "cell_type": "code",
@@ -4854,6 +5018,16 @@
         "\n",
         "monkey_patch_get_signature_names_out()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- if you want to recover a nice DataFrame, you can use\n",
+        "the pipeline’s get_feature_names_out() method:"
+      ],
+      "metadata": {
+        "id": "hZtfZOTtY4yh"
+      }
     },
     {
       "cell_type": "code",
@@ -5071,6 +5245,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- Pipelines support indexing.\n",
+        "- So far, we have handled the categorical columns and the numerical columns separately. It would be more convenient to have a single transformer capable of handling all columns, applying the appropriate transformations to each column.\n",
+        "- For this, you can use a ColumnTransformer."
+      ],
+      "metadata": {
+        "id": "RCix63ZAZGTY"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -5093,6 +5278,24 @@
         "    (\"cat\", cat_pipeline, cat_attribs),\n",
         "])"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**TIP**\n",
+        "- Instead of using a transformer, you can specify the string\n",
+        "\"drop\"\n",
+        "if you want\n",
+        "the columns to be dropped, or you can specify \"passthrough\" if you want the columns to be left untouched.\n",
+        "\n",
+        "**Notes**\n",
+        "- First we import the ColumnTransformer class, then we define the list of numerical and categorical column names and construct a simple pipeline for categorical attributes. Lastly, we construct a ColumnTransformer.\n",
+        "- Scikit-Learn provides a make_column_selector() function that returns a selector function you can use to automatically select all the features of a given type, such as numerical or categorical.\n",
+        "- Moreover, if you don’t care about naming the transformers, you can use make_column_transformer(), which chooses the names for you, just like make_pipeline() does."
+      ],
+      "metadata": {
+        "id": "S5yNRnufZfKA"
+      }
     },
     {
       "cell_type": "code",
@@ -5120,6 +5323,31 @@
       "source": [
         "housing_prepared = preprocessing.fit_transform(housing)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Great! We have a preprocessing pipeline that takes the entire training\n",
+        "dataset and applies each transformer to the appropriate columns, then\n",
+        "concatenates the transformed columns horizontally (transformers must\n",
+        "never change the number of rows).\n",
+        "- Once again this returns a NumPy\n",
+        "array, but you can get the column names using\n",
+        "preprocessing.get_feature_names_out()\n",
+        "and wrap the data in a\n",
+        "nice DataFrame as we did before\n",
+        "\n",
+        "**Notes**\n",
+        "- The\n",
+        "OneHotEncoder\n",
+        "returns a sparse matrix and the\n",
+        "num_pipeline\n",
+        "returns\n",
+        "a dense matrix."
+      ],
+      "metadata": {
+        "id": "1ZxcDfYNcH2N"
+      }
     },
     {
       "cell_type": "code",
@@ -5251,6 +5479,38 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Your project is going really well and you’re almost ready to train some\n",
+        "models! You now want to create a single pipeline that will perform all the\n",
+        "transformations you’ve experimented with up to now. Let’s recap what the\n",
+        "pipeline will do and why:\n",
+        "- Missing values in numerical features will be imputed by replacing\n",
+        "them with the median, as most ML algorithms don’t expect missing\n",
+        "values. In categorical features, missing values will be replaced by the\n",
+        "most frequent category.\n",
+        "- The categorical feature will be one-hot encoded, as most ML\n",
+        "algorithms only accept numerical inputs.\n",
+        "- A few ratio features will be computed and added: bedrooms_ratio,\n",
+        "rooms_per_house, and people_per_house. Hopefully these will\n",
+        "better correlate with the median house value, and thereby help the\n",
+        "ML models.\n",
+        "- A few cluster similarity features will also be added. These will likely be\n",
+        "more useful to the model than latitude and longitude.\n",
+        "- Features with a long tail will be replaced by their logarithm, as most\n",
+        "models prefer features with roughly uniform or Gaussian distributions.\n",
+        "- All numerical features will be standardized, as most ML algorithms\n",
+        "prefer when all features have roughly the same scale.\n",
+        "\n",
+        "**Next step**\n",
+        "- The code that builds the pipeline to do all of this should look familiar to you\n",
+        "by now:"
+      ],
+      "metadata": {
+        "id": "jkjWjI2qcw0e"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -5288,6 +5548,16 @@
         "    ],\n",
         "    remainder=default_num_pipeline)  # one column remaining: housing_median_age"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- If you run this ColumnTransformer, it performs all the transformations\n",
+        "and outputs a NumPy array with 24 features:"
+      ],
+      "metadata": {
+        "id": "Gm5R2GcXdS91"
+      }
     },
     {
       "cell_type": "code",
